--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-agno>=0.1.0
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=1.0.0
-requests>=2.27.0
-python-dotenv>=0.19.0
-pytest>=6.2.5
-json-schema>=4.0.0
-fastapi>=0.68.0
-uvicorn>=0.15.0
-pydantic>=1.9.0
-matplotlib>=3.5.0 
+agno
+numpy
+pandas
+scikit-learn
+requests
+python-dotenv
+pytest
+json-schema
+fastapi
+uvicorn
+pydantic
+matplotlib
