--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
+streamlit>=1.30.0
+openai>=1.10.0
 agno
-numpy
-pandas
-scikit-learn
-requests
-python-dotenv
-pytest
-json-schema
-fastapi
-uvicorn
-pydantic
-matplotlib
+numpy>=1.24.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+scikit-learn>=1.2.0
+requests>=2.28.0
+python-dotenv>=1.0.0
+pytest>=7.3.0
+json-schema>=4.17.0
+fastapi>=0.95.0
+uvicorn>=0.22.0
+pydantic>=1.10.0
+matplotlib>=3.7.0
